<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">
    <ImageView
        android:id="@+id/item_background"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/item_background"
        android:importantForAccessibility="no"
        tools:tint="#FFCFCF"
        />
    <ImageView
        android:id="@+id/item_image"
        android:layout_width="124dp"
        android:layout_height="124dp"
        app:layout_constraintStart_toStartOf="@id/item_background"
        app:layout_constraintEnd_toEndOf="@id/item_background"
        app:layout_constraintTop_toTopOf="@id/item_background"
        app:layout_constraintBottom_toBottomOf="@id/item_background"
        android:scaleType="centerInside"
        android:contentDescription="@string/item_image"
        tools:src="@drawable/pink_sneakers"
        />

    <TextView
        style="@style/medium_text"
        android:id="@+id/item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/cart_text_start"
        android:layout_marginEnd="16dp"
        android:gravity="start"
        tools:text="Pink sneakers"
        />

    <TextView
        style="@style/small_text"
        android:id="@+id/item_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/item_name"
        app:layout_constraintEnd_toEndOf="@id/item_name"
        app:layout_constraintTop_toBottomOf="@id/item_name"
        android:layout_marginTop="8dp"
        android:gravity="start"
        tools:text="1 599 SEK"
        />

    <LinearLayout
        android:id="@+id/remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/item_name"
        app:layout_constraintTop_toBottomOf="@id/item_price"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:background="@drawable/expanding_button_background"
        android:backgroundTint="@color/remove_from_cart_button"
        android:contentDescription="@string/remove_from_cart_description">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:scaleType="center"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_remove_from_cart"
            />
        <TextView
            style="@style/tiny_white_text"
            android:id="@+id/remove_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="12dp"
            android:text="@string/remove"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>