<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cart_footer_cell"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="@drawable/cart_background_bottom">
    <ImageView
        android:id="@+id/shipping_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="40dp"
        android:src="@drawable/ic_shipping"
        android:importantForAccessibility="no"
        />
    <TextView
        style="@style/medium_text"
        android:id="@+id/shipping_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/cart_text_start"
        android:gravity="start"
        android:text="@string/shipping"/>
    <TextView
        style="@style/small_text"
        android:id="@+id/shipping_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/shipping_title"
        app:layout_constraintEnd_toEndOf="@id/shipping_title"
        app:layout_constraintTop_toBottomOf="@id/shipping_title"
        android:layout_marginTop="8dp"
        android:gravity="start"
        tools:text="120 SEK"
        />
    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shipping_price"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="#979797"
        />
    <TextView
        style="@style/medium_text"
        android:id="@+id/total_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/shipping_title"
        app:layout_constraintEnd_toEndOf="@id/shipping_title"
        app:layout_constraintTop_toBottomOf="@id/separator"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:text="@string/total"/>
    <TextView
        style="@style/small_text"
        android:id="@+id/total_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/shipping_title"
        app:layout_constraintEnd_toEndOf="@id/shipping_title"
        app:layout_constraintTop_toBottomOf="@id/total_title"
        android:layout_marginTop="8dp"
        android:gravity="start"
        tools:text="1 599 SEK"
        />
    <TextView
        style="@style/tiny_white_text"
        android:id="@+id/check_out_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_title"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/expanding_button_background"
        android:backgroundTint="#000000"
        android:gravity="center"
        android:text="@string/check_out"
        />
</androidx.constraintlayout.widget.ConstraintLayout>